--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -272,9 +272,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-rc.4-x86_64",
-        "support_level": "beta",
-        "version": "4.19.0-rc.4",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.4-x86_64",
+        "version": "4.19.4",
         "default": true
     },
     {
@@ -283,9 +282,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-rc.4-aarch64",
-        "support_level": "beta",
-        "version": "4.19.0-rc.4"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.4-aarch64",
+        "version": "4.19.4"
     },
     {
         "openshift_version": "4.19-multi",
@@ -296,8 +294,7 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-rc.4-multi",
-        "support_level": "beta",
-        "version": "4.19.0-rc.4-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.4-multi",
+        "version": "4.19.4-multi"
     }
 ]
