--- a/.tekton/assisted-service-saas-v2-43-push.yaml
+++ b/.tekton/assisted-service-saas-v2-43-push.yaml
@@ -28,6 +28,12 @@ spec:
     value: Dockerfile.assisted-service
   - name: path-context
     value: .
+  - name: build-args
+    value:
+    - release={{target_branch}}
+    - version={{revision}}
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
@@ -369,6 +375,10 @@ spec:
         value: $(tasks.build-image-index.results.IMAGE_DIGEST)
       - name: image-url
         value: $(tasks.build-image-index.results.IMAGE_URL)
+      - name: ARGS
+        value: --project-name=assisted-service --report --org=3e6fd93b-b325-49dd-8a33-432a0160ab66
+      - name: IGNORE_FILE_PATHS
+        value: tools/wait_for_assisted_service.py,tools/deploy_wiremock.py
       - name: SOURCE_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
