--- a/.tekton/assisted-service-rhel9-acm-ds-2-16-pull-request.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-16-pull-request.yaml
@@ -4,16 +4,17 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/openshift/assisted-service?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
+    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "release-ocm-2.15"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
+      == "release-ocm-2.16"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-15
-    appstudio.openshift.io/component: assisted-service-rhel8-acm-ds-2-15
+    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-16
+    appstudio.openshift.io/component: assisted-service-rhel9-acm-ds-2-16
     pipelines.appstudio.openshift.io/type: build
-  name: assisted-service-rhel8-acm-ds-2-15-on-push
+  name: assisted-service-rhel9-acm-ds-2-16-on-pull-request
   namespace: assisted-installer-tenant
 spec:
   params:
@@ -22,7 +23,9 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-15/assisted-service-rhel8-acm-ds-2-15:{{revision}}
+    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-16/assisted-service-rhel9-acm-ds-2-16:on-pr-{{revision}}
+  - name: image-expires-after
+    value: 5d
   - name: build-platforms
     value:
     - linux/x86_64
@@ -30,7 +33,7 @@ spec:
     - linux/ppc64le
     - linux/s390x
   - name: dockerfile
-    value: Dockerfile.assisted-service-rhel8-mce
+    value: Dockerfile.assisted-service-rhel9-mce
   - name: path-context
     value: .
   - name: build-args
@@ -40,7 +43,7 @@ spec:
   - name: hermetic
     value: "true"
   - name: prefetch-input
-    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel8/"}]'
+    value: '[{"type": "gomod", "path": "."}, {"type": "rpm", "path": "./rpm-prefetching/assisted-service-rhel9/"}]'
   - name: build-source-image
     value: "true"
   pipelineSpec:
@@ -621,7 +624,7 @@ spec:
     - name: netrc
       optional: true
   taskRunTemplate:
-    serviceAccountName: build-pipeline-assisted-service-rhel8-acm-ds-2-15
+    serviceAccountName: build-pipeline-assisted-service-rhel9-acm-ds-2-16
   workspaces:
   - name: git-auth
     secret:
