--- a/.tekton/assisted-service-rhel9-acm-ds-2-16-push.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-16-push.yaml
@@ -4,17 +4,16 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/openshift/assisted-service?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
-    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "release-ocm-2.15"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
+      == "release-ocm-2.16"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-15
-    appstudio.openshift.io/component: assisted-service-rhel9-acm-ds-2-15
+    appstudio.openshift.io/application: assisted-installer-application-acm-ds-2-16
+    appstudio.openshift.io/component: assisted-service-rhel9-acm-ds-2-16
     pipelines.appstudio.openshift.io/type: build
-  name: assisted-service-rhel9-acm-ds-2-15-on-pull-request
+  name: assisted-service-rhel9-acm-ds-2-16-on-push
   namespace: assisted-installer-tenant
 spec:
   params:
@@ -23,9 +22,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-15/assisted-service-rhel9-acm-ds-2-15:on-pr-{{revision}}
-  - name: image-expires-after
-    value: 5d
+    value: quay.io/redhat-user-workloads/assisted-installer-tenant/assisted-installer-application-acm-ds-2-16/assisted-service-rhel9-acm-ds-2-16:{{revision}}
   - name: build-platforms
     value:
     - linux/x86_64
@@ -624,7 +621,7 @@ spec:
     - name: netrc
       optional: true
   taskRunTemplate:
-    serviceAccountName: build-pipeline-assisted-service-rhel9-acm-ds-2-15
+    serviceAccountName: build-pipeline-assisted-service-rhel9-acm-ds-2-16
   workspaces:
   - name: git-auth
     secret:
