ACM-22740: Approve CSRs for a host before marking as Done (#7903)
* ACM-22740: Add CSR status field to Agent

Includes generated files.

* ACM-22740: Track CSR approval in Agent status

Modifies the flow for a day-2 host where the Agent/host will
not be in Done status until both Client and Server CSRs are
approved for the host. This prevents a race condition where
the controller will mark the host as Done before the Server
CSRs are signed.

--- a/config/crd/resources.yaml
+++ b/config/crd/resources.yaml
@@ -915,6 +915,35 @@ spec:
                   - type
                   type: object
                 type: array
+              csrStatus:
+                description: CSRStatus tracks the status of CSR approvals for the
+                  agent
+                properties:
+                  approvedCSRs:
+                    description: CSRs that have been approved for the agent by the
+                      assisted-service
+                    items:
+                      description: CSRInfo tracks information about an approved CSR
+                      properties:
+                        approvedAt:
+                          format: date-time
+                          type: string
+                        name:
+                          type: string
+                        type:
+                          description: CSRType represents the type of CSR
+                          type: string
+                      required:
+                      - approvedAt
+                      - name
+                      - type
+                      type: object
+                    type: array
+                  lastApprovalAttempt:
+                    description: Last time we attempted a CSR approval
+                    format: date-time
+                    type: string
+                type: object
               debugInfo:
                 description: DebugInfo includes information for debugging the installation
                   process.
