Set AIUI_CHAT_API_URL for podman deployment
The nginx configuration for the UI doesn't start well without it. Set
dummy URL to make it at-least parse the config

--- a/deploy/podman/configmap-disconnected.yml
+++ b/deploy/podman/configmap-disconnected.yml
@@ -53,3 +53,5 @@ data:
     -----BEGIN CERTIFICATE-----
     <your cert goes here>
     -----END CERTIFICATE-----
+  # Dummy values, doesn't do anything
+  AIUI_CHAT_API_URL: http://localhost:12121
