--- a/deploy/podman/configmap.yml
+++ b/deploy/podman/configmap.yml
@@ -31,4 +31,5 @@ data:
   SERVICE_BASE_URL: http://127.0.0.1:8090
   STORAGE: filesystem
   ENABLE_UPGRADE_AGENT: "true"
-
+  # Dummy values, doesn't do anything
+  AIUI_CHAT_API_URL: http://localhost:12121
