--- a/deploy/podman/configmap_tls.yml
+++ b/deploy/podman/configmap_tls.yml
@@ -35,3 +35,5 @@ data:
   SERVICE_BASE_URL: https://127.0.0.1:8090
   STORAGE: filesystem
   ENABLE_UPGRADE_AGENT: "true"
+  # Dummy values, doesn't do anything
+  AIUI_CHAT_API_URL: http://localhost:12121
