NO-ISSUE: support setting TNA_CLUSTERS_SUPPORT when deploying with assisted-test-infra

--- a/deploy/assisted-service-configmap.yaml
+++ b/deploy/assisted-service-configmap.yaml
@@ -31,3 +31,4 @@ data:
   IGNORED_OPENSHIFT_VERSIONS: REPLACE_IGNORED_OPENSHIFT_VERSIONS
   NVIDIA_REQUIRE_GPU: REPLACE_NVIDIA_REQUIRE_GPU
   AMD_REQUIRE_GPU: REPLACE_AMD_REQUIRE_GPU
+  TNA_CLUSTERS_SUPPORT: REPLACE_TNA_CLUSTERS_SUPPORT
