NO-ISSUE: Update Konflux references

--- a/.tekton/assisted-service-rhel8-acm-ds-2-15-pull-request.yaml
+++ b/.tekton/assisted-service-rhel8-acm-ds-2-15-pull-request.yaml
@@ -298,6 +298,8 @@ spec:
       params:
       - name: BINARY_IMAGE
         value: $(params.output-image)
+      - name: BINARY_IMAGE_DIGEST
+        value: $(tasks.build-image-index.results.IMAGE_DIGEST)
       - name: SOURCE_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
