--- a/internal/operators/kubedescheduler/templates/openshift/50_kube_descheduler_namespace.yaml
+++ b/internal/operators/kubedescheduler/templates/openshift/50_kube_descheduler_namespace.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ .Operator.Namespace }}
+  labels:
+    openshift.io/cluster-monitoring: "true"
