--- a/internal/operators/numaresources/templates/openshift/50_numaresources_namespace.yaml
+++ b/internal/operators/numaresources/templates/openshift/50_numaresources_namespace.yaml
@@ -1,4 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Operator.Namespace }} 
+  name: {{ .Operator.Namespace }}
+  labels:
+    openshift.io/cluster-monitoring: "true"
