context-aware monitoring

--- a/skipper.env
+++ b/skipper.env
@@ -45,3 +45,8 @@ ENABLE_EVENT_STREAMING
 INSTALLER_IMAGE
 CONTROLLER_IMAGE
 ROOTLESS_DEPLOYMENT
+# Monitoring deadlines (optional) — see MGMT-21268
+# CLUSTER_MONITOR_PER_CLUSTER_DEADLINE=2m
+# CLUSTER_MONITOR_BLACKLIST_DURATION=15m
+# CLUSTER_MONITOR_CYCLE_DEADLINE=4m
+# HOST_MONITOR_PER_HOST_TIMEOUT=2m
