--- a/docs/hive-integration/crds/nmstate.yaml
+++ b/docs/hive-integration/crds/nmstate.yaml
@@ -36,12 +36,13 @@ spec:
       config:
         - destination: 0.0.0.0/0
           next-hop-address: 192.168.126.1
-          next-hop-interface: eth1
+          next-hop-interface: eth0
           table-id: 254
         - destination: 0.0.0.0/0
           next-hop-address: 192.168.140.1
           next-hop-interface: eth1
           table-id: 254
+          metric: 100
   interfaces:
     - name: "eth0"
       macAddress: "02:00:00:80:12:14"
