--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -272,8 +272,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.10-x86_64",
-        "version": "4.19.10",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.11-x86_64",
+        "version": "4.19.11",
         "default": true
     },
     {
@@ -282,8 +282,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.10-aarch64",
-        "version": "4.19.10"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.11-aarch64",
+        "version": "4.19.11"
     },
     {
         "openshift_version": "4.19-multi",
@@ -294,8 +294,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.19.10-multi",
-        "version": "4.19.10-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.11-multi",
+        "version": "4.19.11-multi"
     },
     {
         "openshift_version": "4.20",
@@ -303,9 +303,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-ec.6-x86_64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-rc.0-x86_64",
         "support_level": "beta",
-        "version": "4.20.0-ec.6"
+        "version": "4.20.0-rc.0"
     },
     {
         "openshift_version": "4.20",
@@ -313,9 +313,9 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-ec.6-aarch64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-rc.0-aarch64",
         "support_level": "beta",
-        "version": "4.20.0-ec.6"
+        "version": "4.20.0-rc.0"
     },
     {
         "openshift_version": "4.20-multi",
@@ -326,8 +326,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-ec.6-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-rc.0-multi",
         "support_level": "beta",
-        "version": "4.20.0-ec.6-multi"
+        "version": "4.20.0-rc.0-multi"
     }
 ]
