--- a/ci-images/Dockerfile.base
+++ b/ci-images/Dockerfile.base
@@ -1,6 +1,6 @@
 FROM registry.access.redhat.com/ubi9/go-toolset:1.21 AS golang
 
-RUN go install gotest.tools/gotestsum@latest
+RUN go install gotest.tools/gotestsum@v1.12.3
 
 FROM quay.io/centos/centos:stream9
 
