--- a/Dockerfile.assisted-service
+++ b/Dockerfile.assisted-service
@@ -1,6 +1,4 @@
-ARG RHEL_VERSION=9
-
-FROM registry.access.redhat.com/ubi$RHEL_VERSION/go-toolset:1.23 AS golang
+FROM registry.access.redhat.com/ubi9/go-toolset:1.23 AS golang
 
 ADD . /app
 WORKDIR /app
@@ -10,12 +8,11 @@ RUN go install github.com/google/go-licenses@v1.6.0
 RUN ${HOME}/go/bin/go-licenses save --save_path /tmp/licenses ./...
 
 # Build binaries
-FROM quay.io/centos/centos:stream$RHEL_VERSION as builder
+FROM quay.io/centos/centos:stream9 as builder
 
-COPY hack/container_build_scripts/install_build_deps.sh .
-COPY hack/container_build_scripts/utils.sh .
-ARG RHEL_VERSION
-RUN ./install_build_deps.sh $RHEL_VERSION
+# Build requirements 
+RUN dnf install --enablerepo=crb -y gcc git nmstate-devel openssl-devel \
+    && dnf clean all
 
 ENV GOROOT=/usr/lib/golang
 ENV GOPATH=/opt/app-root/src/go
@@ -47,7 +44,7 @@ RUN cd ./cmd/agentbasedinstaller/client && CGO_ENABLED=1 GOFLAGS="" GO111MODULE=
 RUN git rev-parse --short HEAD > /commit-reference.txt
 
 # Create final image
-FROM quay.io/centos/centos:stream$RHEL_VERSION
+FROM quay.io/centos/centos:stream9
 
 ARG release=main
 ARG version=latest
@@ -65,11 +62,6 @@ LABEL vendor "Red Hat, Inc."
 LABEL maintainer "Red Hat"
 
 COPY --from=golang /tmp/licenses /licenses
-
-COPY hack/container_build_scripts/replace_dnf_repositories_ref_if_needed.sh .
-COPY hack/container_build_scripts/utils.sh .
-ARG RHEL_VERSION
-RUN ./replace_dnf_repositories_ref_if_needed.sh $RHEL_VERSION
 
 # multiarch images need it till WRKLDS-222 and https://bugzilla.redhat.com/show_bug.cgi?id=2111537 are fixed
 RUN dnf install -y --setopt=install_weak_deps=False skopeo
