--- a/.tekton/assisted-service-rhel9-acm-ds-2-13-push.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-13-push.yaml
@@ -53,7 +53,7 @@ spec:
     - name: slack-webhook-notification-secret-key
       value: token
     - name: slack-webhook-notification-message
-      value: "[ACM] [2.13] [assisted-service-rhel9] [{{revision}}] Konflux build failed"
+      value: "[ACM] [2.13] [assisted-service-rhel9] [{{revision}}] [<https://konflux-ui.apps.stone-prd-rh01.pg1f.p1.openshiftapps.com/ns/assisted-installer-tenant/applications/assisted-installer-application-acm-ds-2-13/pipelineruns/$(context.pipelineRun.name)|pipeline>] Konflux build failed"
   pipelineRef:
     resolver: git
     params:
