MGMT-21725: Update Renovate for legacy EL8 Dockerfiles
• Restores the regex rule for Dockerfile.assisted-service-rhel8-mce (ubi8)
• Adds a manager for legacy Dockerfile.assisted-service using $RHEL_VERSION
• Keeps existing EL9 handling and grouping unchanged.

--- a/renovate.json
+++ b/renovate.json
@@ -53,6 +53,28 @@
             ],
             "depNameTemplate": "registry.access.redhat.com/ubi9/go-toolset",
             "datasourceTemplate": "docker"
+        },
+        {
+            "customType": "regex",
+            "fileMatch": [
+                "^Dockerfile.assisted-service$"
+            ],
+            "matchStrings": [
+                "FROM registry.access.redhat.com/ubi\\$RHEL_VERSION/go-toolset:(?<currentValue>.*?) AS golang\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi8/go-toolset",
+            "datasourceTemplate": "docker"
+        },
+        {
+            "customType": "regex",
+            "fileMatch": [
+                "^Dockerfile.assisted-service-rhel8-mce$"
+            ],
+            "matchStrings": [
+                "FROM --platform=\\$BUILDPLATFORM registry.access.redhat.com/ubi8/go-toolset:(?<currentValue>.*?) AS builder\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi8/go-toolset",
+            "datasourceTemplate": "docker"
         }
     ],
 
