MGMT-21958: Prepare 4.20 stable versions assisted-service upstream

--- a/data/default_release_sources.json
+++ b/data/default_release_sources.json
@@ -349,6 +349,52 @@
       {
         "cpu_architecture": "x86_64",
         "channels": [
+          "candidate",
+          "stable"
+        ]
+      },
+      {
+        "cpu_architecture": "arm64",
+        "channels": [
+          "candidate",
+          "stable"
+        ]
+      },
+      {
+        "cpu_architecture": "ppc64le",
+        "channels": [
+          "candidate",
+          "stable"
+        ]
+      },
+      {
+        "cpu_architecture": "s390x",
+        "channels": [
+          "candidate",
+          "stable"
+        ]
+      },
+      {
+        "cpu_architecture": "multi",
+        "channels": [
+          "candidate",
+          "stable"
+        ]
+      }
+    ]
+  },
+  {
+    "openshift_version": "4.21",
+    "multi_cpu_architectures": [
+      "x86_64",
+      "arm64",
+      "s390x",
+      "ppc64le"
+    ],
+    "upgrade_channels": [
+      {
+        "cpu_architecture": "x86_64",
+        "channels": [
           "candidate"
         ]
       },
