--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -303,9 +303,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-rc.3-x86_64",
-        "support_level": "beta",
-        "version": "4.20.0-rc.3"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-x86_64",
+        "default": true,
+        "version": "4.20.0"
     },
     {
         "openshift_version": "4.20",
@@ -313,9 +313,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-rc.3-aarch64",
-        "support_level": "beta",
-        "version": "4.20.0-rc.3"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-aarch64",
+        "version": "4.20.0"
     },
     {
         "openshift_version": "4.20-multi",
@@ -326,8 +325,40 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-rc.3-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.20.0-multi",
+        "version": "4.20.0-multi"
+    },
+    {
+        "openshift_version": "4.21",
+        "cpu_architecture": "x86_64",
+        "cpu_architectures": [
+            "x86_64"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.21.0-ec.2-x86_64",
         "support_level": "beta",
-        "version": "4.20.0-rc.3-multi"
+        "version": "4.21.0-ec.2"
+    },
+    {
+        "openshift_version": "4.21",
+        "cpu_architecture": "arm64",
+        "cpu_architectures": [
+            "arm64"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.21.0-ec.2-aarch64",
+        "support_level": "beta",
+        "version": "4.21.0-ec.2"
+    },
+    {
+        "openshift_version": "4.21-multi",
+        "cpu_architecture": "multi",
+        "cpu_architectures": [
+            "x86_64",
+            "arm64",
+            "ppc64le",
+            "s390x"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.21.0-ec.2-multi",
+        "support_level": "beta",
+        "version": "4.21.0-ec.2-multi"
     }
 ]
