--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -58,6 +58,7 @@ spec:
                 fieldPath: metadata.name
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
         livenessProbe:
           httpGet:
             path: /healthz
