--- a/deploy/assisted-service.yaml
+++ b/deploy/assisted-service.yaml
@@ -24,6 +24,8 @@ spec:
               memory: 400Mi
           image: REPLACE_IMAGE
           imagePullPolicy: Always
+          securityContext:
+            readOnlyRootFilesystem: true
           ports:
             - containerPort: 8090
           livenessProbe:
@@ -143,12 +145,20 @@ spec:
             - name: mirror-registry-conf
               mountPath: "/etc/containers"
               readOnly: true
+            - name: workdir-volume
+              mountPath: /data
+            - name: tmp-volume
+              mountPath: /tmp
       serviceAccountName: assisted-service
       volumes:
         - name: route53-creds
           secret:
             secretName: route53-creds
             optional: true
+        - name: workdir-volume
+          emptyDir: {}
+        - name: tmp-volume
+          emptyDir: {}
         - name: mirror-registry-ca
           configMap:
             name: mirror-registry-ca
