MGMT-9154: Implement agent auto-approval based on InfraEnv configuration Add support for automatically approving Agents discovered by an InfraEnv when the agentApproval.autoApprove field is set to true.

--- a/config/crd/bases/agent-install.openshift.io_infraenvs.yaml
+++ b/config/crd/bases/agent-install.openshift.io_infraenvs.yaml
@@ -61,6 +61,20 @@ spec:
                   from the hosts discovered by this infra-env will also trust the
                   certificates in this bundle.
                 type: string
+              agentApproval:
+                description: |-
+                  AgentApproval defines configuration for automatic approval of Agents
+                  discovered by this InfraEnv.
+                properties:
+                  autoApprove:
+                    default: false
+                    description: |-
+                      AutoApprove indicates whether Agents discovered using this InfraEnv
+                      should be automatically approved by the system.
+                      If true, any Agent referencing this InfraEnv may be approved without manual intervention.
+                      Use only in trusted environments.
+                    type: boolean
+                type: object
               agentLabels:
                 additionalProperties:
                   type: string
