NO-ISSUE: Add missing service account for tekton pipelines

--- a/.tekton/assisted-service-rhel9-acm-ds-2-12-push.yaml
+++ b/.tekton/assisted-service-rhel9-acm-ds-2-12-push.yaml
@@ -63,7 +63,8 @@ spec:
         value: main
       - name: pathInRepo
         value: "pipelines/standard-pipeline.yaml"
-  taskRunTemplate: {}
+  taskRunTemplate: 
+    serviceAccountName: build-pipeline-assisted-service-rhel9-acm-ds-2-12
   workspaces:
     - name: git-auth
       secret:
