--- a/.tekton/assisted-service-rhel8-acm-ds-2-12-pull-request.yaml
+++ b/.tekton/assisted-service-rhel8-acm-ds-2-12-pull-request.yaml
@@ -58,7 +58,8 @@ spec:
         value: main
       - name: pathInRepo
         value: "pipelines/standard-pipeline.yaml"
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-assisted-service-rhel8-acm-ds-2-12
   workspaces:
     - name: git-auth
       secret:
