MGMT-22103: Add EVENT_RATE_LIMITS to kind/subsystem test ConfigMap
Add EVENT_RATE_LIMITS field to deploy/assisted-service-configmap.yaml
to support event rate limiting configuration in kind-based deployments
and subsystem tests.

--- a/deploy/assisted-service-configmap.yaml
+++ b/deploy/assisted-service-configmap.yaml
@@ -32,3 +32,4 @@ data:
   NVIDIA_REQUIRE_GPU: REPLACE_NVIDIA_REQUIRE_GPU
   AMD_REQUIRE_GPU: REPLACE_AMD_REQUIRE_GPU
   TNA_CLUSTERS_SUPPORT: REPLACE_TNA_CLUSTERS_SUPPORT
+  EVENT_RATE_LIMITS: ""
