NO-ISSUE: Add GPU support to Agent inventory
This change adds GPU hardware information to the Agent CRD and controller:

- Add `HostGPU` struct with vendor, device ID, name and address fields
- Add `Gpus` field to `HostInventory` for storing GPU information
- Update generated deepcopy methods for the new GPU types
- Update CRD definitions and OLM manifests to include GPU schema
- Add GPU inventory mapping in `AgentReconciler.updateInventoryAndLabels`

This enables the assisted-service to track and report GPU hardware
information for hosts during cluster installation.

Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/deploy/olm-catalog/manifests/agent-install.openshift.io_agents.yaml
+++ b/deploy/olm-catalog/manifests/agent-install.openshift.io_agents.yaml
@@ -336,6 +336,21 @@ spec:
                       - id
                       type: object
                     type: array
+                  gpus:
+                    items:
+                      properties:
+                        address:
+                          type: string
+                        deviceID:
+                          type: string
+                        name:
+                          type: string
+                        vendor:
+                          type: string
+                        vendorID:
+                          type: string
+                      type: object
+                    type: array
                   hostname:
                     type: string
                   interfaces:
