MGMT-22320: Expose GPU data in Agent CR inventory
GPU data is collected by the agent from hosts but was not exposed in
the Agent CR status inventory. This adds GPU information to the Agent
CR so users can see GPU details when using kubeAPI mode (MCE, ACM,
infrastructure-operator).

Changes:
- Add HostGpu struct to agent_types.go with fields: Address, DeviceID,
  Name, Vendor, VendorID
- Add Gpus field to HostInventory struct
- Update agent_controller to copy GPU data from host inventory to
  Agent CR status
- Add DeepCopy functions for HostGpu type
- Add unit test verifying GPU data is copied to Agent CR

--- a/config/crd/bases/agent-install.openshift.io_agents.yaml
+++ b/config/crd/bases/agent-install.openshift.io_agents.yaml
@@ -330,6 +330,28 @@ spec:
                       - id
                       type: object
                     type: array
+                  gpus:
+                    items:
+                      properties:
+                        address:
+                          description: Device address (for example "0000:00:02.0")
+                          type: string
+                        deviceID:
+                          description: ID of the device (for example "3ea0")
+                          type: string
+                        name:
+                          description: Product name of the device (for example "UHD
+                            Graphics 620 (Whiskey Lake)")
+                          type: string
+                        vendor:
+                          description: The name of the device vendor (for example
+                            "Intel Corporation")
+                          type: string
+                        vendorID:
+                          description: ID of the vendor (for example "8086")
+                          type: string
+                      type: object
+                    type: array
                   hostname:
                     type: string
                   interfaces:
