--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,77 +1,61 @@
-# This file contains all available configuration options
-# with their default values.
-
-# options for analysis running
+version: "2"
 run:
-  # default concurrency is a available CPU number
   concurrency: 4
-
-  # timeout for analysis, e.g. 30s, 5m, default is 1m
-  timeout: 10m
-
-  # exit code when at least one issue was found, default is 1
   issues-exit-code: 1
-
-  # include test files or not, default is true
   tests: true
-
-
-
-# output configuration options
-output:
-  # print lines of code with issue, default is true
-  print-issued-lines: true
-
-  # print linter name in the end of issue text, default is true
-  print-linter-name: true
-
-
-issues:
-  # List of regexps of issue texts to exclude, empty list by default.
-  # But independently from this option we use default exclude patterns,
-  # it can be disabled by `exclude-use-default: false`. To list all
-  # excluded by default patterns execute `golangci-lint run --help`
-  exclude:
-    - G107
-    - G402  # support object store DisableSSL
-    - G108
-  
-  # which dirs to skip: issues from them won't be reported;
-  # can use regexp here: generated.*, regexp is applied on full path;
-  # default value is empty list, but default dirs are skipped independently
-  # from this option's value (see skip-dirs-use-default).
-  exclude-dirs:
-    - build
-    - client
-    - docs
-    - models
-    - restapi
-
-  # make issues output unique by line, default is true
-  uniq-by-line: true
-
 linters:
   enable:
-    - gosimple
-    - staticcheck
-    - unused
-    - govet
+    - copyloopvar
     - gocyclo
-    - gofmt
     - gosec
     - unconvert
+  settings:
+    govet:
+      enable:
+        - shadow
+      settings:
+        printf:
+          funcs:
+            - Infof
+            - Warnf
+            - Errorf
+            - Fatalf
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - path: (.+)\.go$
+        text: G107
+      - path: (.+)\.go$
+        text: G402
+      - path: (.+)\.go$
+        text: G108
+    paths:
+      - build
+      - client
+      - docs
+      - models
+      - restapi
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
     - gci
+    - gofmt
     - goimports
-    - copyloopvar
-
-linters-settings:
-  govet:
-    enable:
-      - shadow
-    settings:
-      printf:
-        funcs:
-          - Infof
-          - Warnf
-          - Errorf
-          - Fatalf
+  exclusions:
+    generated: lax
+    paths:
+      - build
+      - client
+      - docs
+      - models
+      - restapi
+      - third_party$
+      - builtin$
+      - examples$
