--- a/Dockerfile.assisted-service-rhel9-mce
+++ b/Dockerfile.assisted-service-rhel9-mce
@@ -25,7 +25,7 @@ RUN CGO_ENABLED=1 GOFLAGS="-p=4" GO111MODULE=on GOOS=${TARGETOS} GOARCH=${TARGET
 RUN CGO_ENABLED=1 GOFLAGS="-p=4" GO111MODULE=on GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -tags ${BUILD_TAGS} -o ./build/agent-installer-client cmd/agentbasedinstaller/client/main.go
 
 
-FROM --platform=$BUILDPLATFORM registry.redhat.io/rhel9-4-els/rhel:9.4
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest@sha256:6fc28bcb6776e387d7a35a2056d9d2b985dc4e26031e98a2bd35a7137cd6fd71
 ARG release=main
 ARG version=latest
 
@@ -41,11 +41,11 @@ COPY --from=builder /app/build/assisted-service-admission /assisted-service-admi
 COPY --from=builder /app/build/agent-installer-client /usr/local/bin/agent-installer-client
 RUN ln -s /usr/local/bin/agent-installer-client /agent-based-installer-register-cluster-and-infraenv
 
-RUN INSTALL_PKGS="libvirt-libs nmstate nmstate-devel nmstate-libs skopeo openshift-clients" && \
-    dnf install -y $INSTALL_PKGS --nobest && \
-    dnf clean all && \
-    rm -rf /var/cache/{yum,dnf}/* && \
-    mkdir -p ${HOME} && \
+# Install required packages via microdnf using rpm-prefetching
+RUN microdnf install -y libvirt-libs nmstate nmstate-libs skopeo openshift-clients && \
+    microdnf clean all
+
+RUN mkdir -p ${HOME} && \
     chown ${USER_UID}:0 ${HOME} && \
     chmod ug+rwx ${HOME} && \
     # runtime user will need to be able to self-insert in /etc/passwd
