--- a/Dockerfile.assisted-service.ocp
+++ b/Dockerfile.assisted-service.ocp
@@ -3,7 +3,7 @@ FROM registry.ci.openshift.org/ocp/builder:rhel-9-golang-1.24-openshift-4.21 AS 
 WORKDIR /src
 COPY . .
 
-RUN dnf install -y gcc nmstate-devel nmstate-libs git && dnf clean all
+RUN dnf install -y gcc nmstate-devel nmstate-libs git libvirt-libs && dnf clean all
 RUN cd cmd && CGO_ENABLED=1 GOFLAGS="" GO111MODULE=on go build -o /build/assisted-service
 RUN cd ./cmd/operator && CGO_ENABLED=1 GOFLAGS="" GO111MODULE=on go build -o /build/assisted-service-operator
 RUN cd ./cmd/webadmission && CGO_ENABLED=1 GOFLAGS="" GO111MODULE=on go build -o /build/assisted-service-admission
@@ -11,16 +11,20 @@ RUN cd ./cmd/agentbasedinstaller/client && CGO_ENABLED=1 GOFLAGS="" GO111MODULE=
 
 
 # Create final image
-FROM registry.ci.openshift.org/ocp/4.21:base-rhel9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest@sha256:6fc28bcb6776e387d7a35a2056d9d2b985dc4e26031e98a2bd35a7137cd6fd71
 
 LABEL io.openshift.release.operator=true
 
 # multiarch images need skopeo until WRKLDS-222 and https://bugzilla.redhat.com/show_bug.cgi?id=2111537 are fixed
 # ToDo: Replace postgres with SQLite DB
 # https://issues.redhat.com/browse/AGENT-223
-RUN dnf install -y postgresql-server libvirt-libs nmstate nmstate-libs skopeo openshift-clients && dnf clean all
+# Note: libvirt-libs restored via multi-stage build for proper functionality
+RUN microdnf install -y postgresql-server nmstate nmstate-libs skopeo && \
+    microdnf clean all
 
-RUN dnf update libksba libxml2 -y && dnf clean all
+COPY --from=builder /usr/lib64/libvirt.so* /usr/lib64/
+
+RUN microdnf update libksba libxml2 -y && microdnf clean all
 
 COPY hack/agent_installer/start_db.sh start_db.sh
 
