--- a/Dockerfile.assisted-service-debug
+++ b/Dockerfile.assisted-service-debug
@@ -24,7 +24,7 @@ RUN cd ./assisted-service && make build-minimal
 
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest@sha256:6fc28bcb6776e387d7a35a2056d9d2b985dc4e26031e98a2bd35a7137cd6fd71
 
-RUN microdnf install -y nmstate nmstate-libs && microdnf clean all
+RUN microdnf install -y nmstate nmstate-libs libvirt-libs && microdnf clean all
 
 ARG DEBUG_SERVICE_PORT=40000
 EXPOSE 8090 $DEBUG_SERVICE_PORT
