--- a/Dockerfile.assisted-service
+++ b/Dockerfile.assisted-service
@@ -11,7 +11,7 @@ RUN ${HOME}/go/bin/go-licenses save --save_path /tmp/licenses ./...
 FROM registry.access.redhat.com/ubi9/ubi:latest@sha256:3816d303e75dec4da2d10eeb9e8651eef4393721598bea4690c607282635aa57 as builder
 
 # Build requirements
-RUN dnf install -y gcc git nmstate-devel openssl-devel libvirt-libs && \
+RUN dnf install -y gcc git nmstate-devel openssl-devel && \
     dnf clean all
 
 ENV GOROOT=/usr/lib/golang
@@ -66,12 +66,9 @@ COPY --from=golang /tmp/licenses /licenses
 # multiarch images need it till WRKLDS-222 and https://bugzilla.redhat.com/show_bug.cgi?id=2111537 are fixed
 RUN microdnf install -y skopeo && \
     microdnf clean all
-# openshift-install requirements (libvirt-libs restored via multi-stage build)
-RUN microdnf install -y nmstate nmstate-libs && \
+# openshift-install requirements
+RUN microdnf install -y nmstate nmstate-libs libvirt-libs && \
     microdnf clean all
-
-# Copy libvirt-libs from builder stage
-COPY --from=builder /usr/lib64/libvirt.so* /usr/lib64/
 
 RUN microdnf update libksba libxml2 -y && microdnf clean all
 
